# ai-code-review-mentor

./: Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/agents/: graph.py
backend/app/api/: dependencies.py
backend/app/core/: config.py
backend/app/domain/: models.py
backend/app/rag/: retriever.py
backend/app/repositories/: reviews.py
backend/app/services/: diff_chunker.py  review_service.py
backend/tests/: test_review_service.py
docs/: learning-roadmap.md
docs/modules/: agent-system.md  rag-system.md
frontend/: package.json  tsconfig.json
frontend/app/: globals.css  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/learning/: page.tsx
frontend/app/login/: page.tsx
frontend/app/reviews/: page.tsx
frontend/app/reviews/[id]/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/ui/: nav.tsx
