[project]
name = "ai-code-review-mentor-backend"
version = "0.1.0"
description = "FastAPI backend for AI pull request review mentoring"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
ai = ["langchain>=0.2.0", "langgraph>=0.2.0", "langsmith>=0.1.0"]
test = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
